# byd-stock-analyzer

./: .gitignore  .stock_list.txt  .stock_list_100.txt  CLAUDE.md  REVIEW.md  manage.py  pyproject.toml  requirements.txt
.claude/backups/2026-06-17/: CLAUDE.md
.claude/backups/2026-06-18/: CLAUDE.md
.claude/backups/2026-06-24/: CLAUDE.md
.claude/backups/2026-06-25/: CLAUDE.md
.claude/backups/2026-06-26/: CLAUDE.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-project-foundation/: PLAN.md
.planning/phases/02-data-acquisition/: PLAN.md
.planning/phases/03-technical-indicators/: PLAN.md
.planning/phases/04-valuation/: PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.prediction_history/: predictions_002594.json
apps/stocks/: urls.py  views.py
cli/: backfill_sh.py  backup.py  buy_alert.py  chart.py  daily_summary.py  improvement_loop.py  main.py  market_chart.py  prediction_report.py  startup_check.py  tenbagger.py  top10.py  top20_standalone.py
config/: settings.py  urls.py
core/: advice.py  backtester.py  buy_timing.py  config.py  data_fetcher.py  market_context.py  market_predictor.py  models.py  position_manager.py  predict.py  prediction_tracker.py  scoring.py  trading_calendar.py
core/analyzers/: technical.py  valuation.py
templates/stocks/: _predict_panel.html  dashboard.html  detail.html  positions.html  scan.html
tests/: test_backup.py  test_prediction_tracker.py  test_startup_check.py  test_trading_calendar.py
(+10 files in other folders)
